# claude-app

./: CLAUDE.md  Cargo.toml  PKGBUILD  README.md
assets/: style.css
prompts/: architect.md  developer.md  manager.md  scorer.md
src/: ipc.rs  main.rs  persist.rs  process.rs  state.rs  watcher.rs
src/api/: auth.rs  mod.rs  runs.rs  sessions.rs  state.rs  tests.rs  types.rs
src/claude/: mod.rs  process.rs  protocol.rs  session.rs
src/orchestrator/: agent.rs  mod.rs  parser.rs  roles.rs  routing.rs  types.rs
src/sandbox/: mod.rs
src/state/: mod.rs  orchestrator.rs
src/ui/: chat.rs  diff.rs  launch.rs  message.rs  mod.rs  projects.rs  prompt.rs  sidebar.rs
src/worktree/: mod.rs
