[package]
name = "claude-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
tokio-stream = { version = "0.1", features = ["sync"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
