[package]
name = "claude-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "6"
notify = "7"
llm-sdk = { git = "https://github.com/Osso/llm-sdk.git" }
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git" }
